--- a/public/index.html
+++ b/public/index.html
@@ -26,14 +26,14 @@
 		</div>
 		<div id="controls" class="cf">
 			<ul>
-				<li><i class="icon-trash" id="stop"></i></li>
-				<li><i class="icon-pause" id="pause"></i></li>
+				<li><i class="icon-remove disabled" id="stop"></i></li>
+				<li><i class="icon-pause disabled" id="pause"></i></li>
 				<li><i class="icon-play" id="play"></i></li>
 			</ul>
 		</div>
 	</div>
 
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
